# vibecodingsideprojects

./: .env.example  .gitignore  CASE_STUDY.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
docs/: Architecture.md  ImplementationPlan.md  context.md  edge-case.md  problemstatement.txt
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: NeighborhoodPicker.tsx  PlaceCard.tsx
scripts/: build_v2_dataset.py
src/restaurant_rec/: config.py  main.py
src/restaurant_rec/api/: dependencies.py  routes.py
src/restaurant_rec/data/: cache.py  loader.py
src/restaurant_rec/llm/: client.py  parser.py  prompt_builder.py
src/restaurant_rec/models/: __init__.py  recommendation.py  restaurant.py
src/restaurant_rec/services/: filter.py  metadata.py  orchestrator.py  scoring.py
tests/: __init__.py  test_api.py  test_config.py  test_filter.py  test_loader.py  test_parser.py
